[gd_scene load_steps=2 format=3 uid="uid://ctgo0pejxet5"]

[ext_resource type="Script" uid="uid://dr6l7qh0dopw0" path="res://src/network/network.gd" id="1_ce5ee"]

[node name="Network" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ce5ee")

[node name="NetworkContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -183.0
offset_top = -112.0
offset_right = -14.0
offset_bottom = 112.0
grow_horizontal = 0
grow_vertical = 2

[node name="UsernameInput" type="LineEdit" parent="NetworkContainer"]
layout_mode = 2
placeholder_text = "Username"

[node name="HostButton" type="Button" parent="NetworkContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="NetworkContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
text = "Join"

[node name="IPInput" type="LineEdit" parent="NetworkContainer"]
layout_mode = 2
placeholder_text = "IP Input"
